Trying to solve overflow

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html, body {
 .topbar {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     padding: 20px;
 }
 
@@ -117,7 +117,6 @@ nav {
     text-align: center;
     padding: 50px;
     padding: 0;
-    overflow: hidden;
     z-index: 1;
 }
 
@@ -277,13 +276,22 @@ nav {
     transform: translateX(5px);
 }
 
+.section {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 /*SOKNADSKRITERIER*/
 .soknadskriterier {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 100px 20px;
     text-align: center;
+    position: relative;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .soknadskriterier h2 {
     font-size: 3.5rem;
